@@ -1,6 +1,7 @@
 ============================================================
 === 2015
 
+	In clustal(-like) alignment output, adapt formatting to long names
 1.8.5b
 	Improve libRNA config, in cases where pkg-config does not work:
 	allow compiling without libgomp, if libgomp is unavailable and
